Fix spacing

--- a/template.css
+++ b/template.css
@@ -27,7 +27,7 @@
 
 /* Adjustments relating to large checkboxes */
 .largefix {
-  margin-top: -32px;
+  margin-top: -24px;
   margin-left: 78px;
   font-size: 20px !important;
 }
